Fix footer spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .credit {
-  margin-top: 10px;
+  margin-top: 20px;
   text-align: center;
 }
 
